<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:maxLines="1"
            android:hint="@string/login"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/login_et"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/password"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_re_enter_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/password_et"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/password_re_enter"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_re_enter_et"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/signup_enter"
            android:textColor="@color/white"
            android:theme="@style/DefaultButtonStyle"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </RelativeLayout>

</ScrollView>
