<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar_iv"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_launcher_background"/>

    <TextView
        android:id="@+id/username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/avatar_iv"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/default_username"/>

    <TextView
        android:id="@+id/time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:text="@string/default_time"/>

    <TextView
        android:id="@+id/dialog_content_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/avatar_iv"
        android:layout_below="@id/username_tv"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:maxLines="1"
        android:text="@string/default_message"/>

</RelativeLayout>