<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackgroundBase"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:visibility="visible">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@color/colorBackgroundBase"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_iv"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="50dp"
            android:src="@color/colorAccent" />

        <ImageButton
            android:id="@+id/add_photo"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_alignBottom="@id/avatar_iv"
            android:layout_alignEnd="@id/avatar_iv"
            android:background="@drawable/rounded_button"
            android:src="@drawable/ic_camera_alt_white_24dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/username_tv"
            android:background="@color/greyLight" />

        <TextView
            android:id="@+id/username_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/avatar_iv"
            android:layout_marginBottom="24dp"
            android:background="@color/white"
            android:text="Lounah"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="27sp" />

        <ImageButton
            android:id="@+id/edit_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/username_tv"
            android:layout_alignEnd="@id/username_tv"
            android:layout_alignTop="@+id/username_tv"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:cropToPadding="false"
            android:paddingRight="16dp"
            android:src="@drawable/ic_mode_edit_24dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/edit_username"
            android:background="@color/greyLight" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/personal_data_container"
            android:background="@color/greyLight" />


        <LinearLayout
            android:id="@+id/personal_data_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_tv"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/friends_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_people_black_24dp"
                android:drawablePadding="16dp"
                android:text="10 подписок"
                android:textColor="@android:color/tertiary_text_dark"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/subscribers_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:drawableLeft="@drawable/ic_rss_feed_24dp"
                android:drawablePadding="16dp"
                android:text="1M подписчиков"
                android:textColor="@android:color/tertiary_text_dark"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/location_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:drawableLeft="@drawable/ic_home_black_24dp"
                android:drawablePadding="16dp"
                android:text="Россия, Краснодар"
                android:textColor="@android:color/tertiary_text_dark"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/more_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:drawableLeft="@drawable/ic_more_horiz_primary_24dp"
                android:drawablePadding="16dp"
                android:text="Ещё"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/personal_data_container"
            android:background="@color/greyLight" />

        <Button
            android:id="@+id/edit_profile_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_below="@id/personal_data_container"
            android:background="@color/white"
            android:text="@string/edit_profile" />

        <View
            android:id="@+id/button_profile_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/edit_profile_button"
            android:layout_marginBottom="16dp"
            android:background="@color/greyLight" />

        <View
            android:id="@+id/above_buttons_container_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/button_profile_view"
            android:background="@color/greyLight" />

        <RelativeLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/above_buttons_container_view"
            android:background="@color/white">

            <TextView
                android:id="@+id/add_post_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/view"
                android:drawableLeft="@drawable/ic_create_24dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/create_post"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="8dp"
                android:background="@color/greyLight" />


            <TextView
                android:id="@+id/add_photo_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/view"
                android:drawableLeft="@drawable/ic_add_a_photo_24dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/add_photo"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />


        </RelativeLayout>

        <View
            android:id="@+id/buttons_container_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/buttons_container"
            android:background="@color/greyLight" />

        <View
            android:id="@+id/counter_posts_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/buttons_container_view"
            android:layout_marginTop="16dp" />


        <TextView
            android:id="@+id/count_of_posts_rv_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/counter_posts_view"
            android:background="@color/white"
            android:paddingLeft="16dp"
            android:text="10 постов"
            android:textSize="17sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/posts_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/count_of_posts_rv_tv"
            android:background="@color/colorBackgroundBase"
            android:backgroundTint="@color/colorBackgroundBase"
            tools:listitem="@layout/item_post_photo">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>
